--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,19 @@
 * {
     outline: solid 1px rgba(255,0,0,.3);
 }
-.container{
+body{
+    font-family: sans-serif;
     margin: 0;
     padding: 0;
 }
+.container{
+    margin:0 20px;
+    padding: 0;        
+
+}
 a{
     text-decoration: none;
-    color: #000;
-    font-family: sans-serif;
+    color: #8C9A9B;
 }
 .logo,.menu{
     display: inline-block;
@@ -33,8 +38,12 @@ header img{
 */
 .hero{
     width: 100%;
-    background: #ccc;
-    color: #fff;
+    background: #817F81;
+    color: #fff; 
+    font-family: 'Open+Sans', sans-serif;
+}
+.hero h2{
+    font-size: 50px;
 }
 .col-1,.col-2{
     float: left;
@@ -46,6 +55,10 @@ header img{
 }
 .col-2{
     width: 40%;
+}
+form{
+    background: #9B999B;
+    border-radius: 10px;
 }
 .clearfix{
     display: table;
@@ -65,12 +78,18 @@ header img{
 */
 @media (max-width:700px){
     .container{
-        width: 100%;
+
     }
     .col-1,.col-2{
         width: 100%;
     }
-    header img{
-        width: 100px;
+    header{    
     }
+    header img{
+        width: 100px;    
+    }
+    form{
+        margin: 0 auto;
+    }
+
 }
