--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-* {
-    outline: solid 1px rgba(255,0,0,.3);
-}
 body{
     font-family: 'Open Sans' , sans-serif;
     margin: 0;
@@ -30,6 +27,9 @@ header li{
     padding-right:20px;  
     display: inline-block; 
 }
+header img{
+        padding:25px 0;
+    }
 /*
 header img{
     display: inline-block;    
@@ -88,14 +88,17 @@ footer p{
     clear: both;
 }
 
-/*@media (max-width:900px){
+@media (min-width:700px)and(max-width:900px){
     .container{
         width: 700px;
-        text-align: center;
-        margin: 0 auto;
+    }
+    header li{
+        padding: 25px;
+    }
+    .hero h2{
+        margin-top: 0;
     }
 }
-*/
 @media (max-width:700px){
     .container{
 
@@ -103,7 +106,8 @@ footer p{
     .col-1,.col-2{
         width: 100%;
     }
-    header{    
+    header li{
+        padding: 25px;
     }
     header img{
         width: 100px;    
@@ -112,4 +116,24 @@ footer p{
         margin: 0 auto;
     }
 
+}
+@media (min-width:900px){
+    header li{
+        padding: 25px;
+    }
+    header img{
+        padding:0 0;
+    }
+    .hero h2{
+        margin-top: 0;
+    }
+    .col-1,.col-2{
+        margin: 5% 2.5%;
+    }
+    .col-1{
+        width: 55%;    
+    }
+    .col-2{
+        width: 35%;
+    }
 }
